crates/sdk-tests/tests/template/using_impl_not_allowed.stderr
error: using `impl` inside `#[template]` is not supported.
 --> $DIR/using_impl_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
