crates/sdk-tests/tests/template/using_impl_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    struct S;

    impl S {}
}

fn main() {}
